--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coajs",
-  "version": "1.0.62",
+  "version": "1.0.63",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -15,6 +15,7 @@
     "build": "rm -rf dist* && tsc"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bignumber.js": "^9.0.0",
     "colors": "^1.4.0",
     "fast-glob": "^3.1.0",
