--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coajs",
-  "version": "1.0.95",
+  "version": "1.0.96",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bignumber.js": "^9.0.0",
     "coajs-types": "^1.0.10",
+    "dayjs": "^1.8.22",
     "fast-glob": "^3.2.2",
     "hashids": "1",
     "ioredis": "^4.16.0",
@@ -28,10 +28,8 @@
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "source-map-support": "^0.5.16",
-    "ts-watch": "^1.0.8",
     "tslib": "^1.11.1"
   },
   "devDependencies": {
