--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "module": "commonjs",
-    "target": "esnext",
+    "target": "es2019",
     "outDir": "dist",
     "sourceMap": true,
     "importHelpers": true,
