--- a/package.json
+++ b/package.json
@@ -2,38 +2,34 @@
   "name": "coajs",
   "version": "1.0.114",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "keywords": [
     "coajs"
   ],
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "dev": "tsc-watch",
-    "build": "rm -rf dist* && tsc"
+    "dev": "tsc -w",
+    "build": "rm -rf dist && tsc && cp package.json dist",
+    "npm-publish": "yarn build && yarn version --patch && cp package.json README.md dist && cd dist && npm publish"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "coa-echo": "^1.0.6",
+    "coa-error": "^1.0.1",
+    "coa-helper": "^1.0.3",
+    "coa-secure": "^1.0.2",
     "coajs-types": "^1.0.12",
-    "dayjs": "^1.8.24",
     "fast-glob": "^3.2.2",
-    "hashids": "1",
-    "ioredis": "^4.16.2",
-    "knex": "^0.20.15",
-    "koa": "^2.11.0",
+    "ioredis": "^4.17.1",
+    "knex": "^0.21.1",
+    "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
-    "lodash": "^4.17.15",
     "mysql": "^2.18.1",
-    "source-map-support": "^0.5.16",
-    "tslib": "^1.11.1"
+    "source-map-support": "^0.5.19",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "tsc-watch": "^4.2.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   }
 }
