--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,9 @@
     "module": "commonjs",
     "target": "es2019",
     "outDir": "dist",
-    "sourceMap": true,
+    "declaration": true,
     "importHelpers": true,
-    "incremental": true,
-    "removeComments": true,
-    "declaration": true
+    "removeComments": true
   },
   "include": [
     "src"
