--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coajs",
-  "version": "1.0.114",
+  "version": "1.1.0",
   "license": "MIT",
   "keywords": [
     "coajs"
@@ -11,10 +11,10 @@
     "npm-publish": "yarn build && yarn version --patch && cp package.json README.md dist && cd dist && npm publish"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "coa-echo": "^1.0.6",
+    "coa-env": "^1.0.2",
     "coa-error": "^1.0.1",
-    "coa-helper": "^1.0.3",
+    "coa-helper": "^1.0.4",
     "coa-secure": "^1.0.2",
     "coajs-types": "^1.0.12",
     "fast-glob": "^3.2.2",
